--- a/index.html
+++ b/index.html
@@ -89,6 +89,156 @@
       </div>
     </header>
 
+    <!-- Product -->
+
+    <main class="main">
+      <div class="container_image">
+        <img
+          class="main_gambar"
+          src="images/Gambar 1.jpg"
+          alt="gambar orang ganteng"
+        />
+        <div class="image_sec">
+          <img class="gambar1" src="images/Gambar 1.jpg" alt="" />
+          <img class="gambar2" src="images/gambar 2.jpg" alt="" />
+          <img class="gambar3" src="images/gambar 3.jpg" alt="" />
+          <img class="gambar4" src="images/gambar 4.jpg" alt="" />
+        </div>
+      </div>
+      <div class="container_judul">
+        <p class="judul-product">SARUNG</p>
+        <p class="judul_paragraf">
+          Sarung ATLAS Premium 780 Songket Gunung Warna Hitam Merah
+        </p>
+        <div class="garis"></div>
+        <div class="container_price">
+          <p class="price"><a href="">Rp</a> 389.000</p>
+          <p class="price2"><a href="">Rp</a> 176.094</p>
+        </div>
+        <p class="stock">Stok 98</p>
+        <div class="input_quantity">
+          <input class="minus" type="button" value="-" />
+          <input class="quantity" type="number" min="1" max="98" value="1" />
+          <input class="plus" type="button" value="+" />
+        </div>
+        <button class="add">TAMBAH KE KERANJANG</button>
+        <div>
+          <span class="sku">SKU: SR/AS/PRE/780/SKG/0002</span>
+        </div>
+        <div>
+          <span class="kategory">Kategori: Sarung</span>
+        </div>
+      </div>
+    </main>
+
+    <!-- Footer -->
+
+    <div class="container">
+
+      <div class="element">
+        <div class="background-image">
+          <div>
+            <div>
+              <p class="judul">SHOP</p>
+              <div class="garis"></div>
+            </div>
+
+            <ul>
+              <li class="footer-table"><a class="footer-a" href="">Sarung</a></li>
+              <li class="footer-table" ><a class="footer-a" href="" >Baju Muslim</a></li>
+              <li class="footer-table"><a class="footer-a" href="">Songkok</a></li>
+              <li class="footer-table"><a class="footer-a" href="">Subaiyah</a></li>
+              <li class="footer-table"><a class="footer-a" href="">Kain Batik</a></li>
+              <li class="footer-table"><a class="footer-a" href="">Sprei</a></li>
+              <li class="footer-table"><a class="footer-a" href="">Grosir</a></li>
+              <li class="footer-table"><a class="footer-a" href="">Produk Lainnya</a></li>
+            </ul>
+          </div>
+
+          <div>
+            <div>
+              <p class="judul">Help</p>
+              <div class="garis"></div>
+            </div>
+
+            <ul>
+              <li class="footer-table"><a class="footer-a"  href="">How to Order</a></li>
+              <li class="footer-table"><a class="footer-a" href="">Customer Service</a></li>
+              <li class="footer-table"><a class="footer-a" href="">My Sarung Indonesia</a></li>
+              <li class="footer-table"><a class="footer-a" href="">Legal & Privacy</a></li>
+              <li class="footer-table"><a class="footer-a" href="">Contact</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-info">
+            <div>
+              <p class="judul">Info</p>
+              <div class="garis"></div>
+            </div>
+
+            <ul>
+              <li class="footer-table"><a class="footer-a" href="">About Sarung Indonesia</a></li>
+            </ul>
+
+            <p class="follow">Follow Us :</p>
+
+            <a class="footer-a"
+              href="https://www.facebook.com/sarungindonesia.official"
+              target="_blank"
+            >
+              <svg class="svg-icon"
+                xmlns="http://www.w3.org/2000/svg"
+                x="0px"
+                y="0px"
+                width="100"
+                height="100"
+                viewBox="0 0 50 50"
+              >
+                <path
+                  d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M37,19h-2c-2.14,0-3,0.5-3,2 v3h5l-1,5h-4v15h-5V29h-4v-5h4v-3c0-4,2-7,6-7c2.9,0,4,1,4,1V19z"
+                ></path>
+              </svg>
+            </a>
+
+            <a class="footer-a"
+              href="https://www.instagram.com/sarungindonesia.official/"
+              target="_blank"
+            >
+              <svg class="svg-icon"
+                xmlns="http://www.w3.org/2000/svg"
+                x="0px"
+                y="0px"
+                width="100"
+                height="100"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M 8 3 C 5.239 3 3 5.239 3 8 L 3 16 C 3 18.761 5.239 21 8 21 L 16 21 C 18.761 21 21 18.761 21 16 L 21 8 C 21 5.239 18.761 3 16 3 L 8 3 z M 18 5 C 18.552 5 19 5.448 19 6 C 19 6.552 18.552 7 18 7 C 17.448 7 17 6.552 17 6 C 17 5.448 17.448 5 18 5 z M 12 7 C 14.761 7 17 9.239 17 12 C 17 14.761 14.761 17 12 17 C 9.239 17 7 14.761 7 12 C 7 9.239 9.239 7 12 7 z M 12 9 A 3 3 0 0 0 9 12 A 3 3 0 0 0 12 15 A 3 3 0 0 0 15 12 A 3 3 0 0 0 12 9 z"
+                ></path>
+              </svg>
+            </a>
+
+            <a class="footer-a" href="https://www.youtube.com/@sarungindonesia5589/videos" target="_blank">
+              <svg class="svg-icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 32 32"
+                id="youtube"
+              >
+                <g>
+                  <path d="M13.83 19.259L19.262 16l-5.432-3.259z"></path>
+                  <path
+                    d="M16 0C7.164 0 0 7.163 0 16s7.164 16 16 16 16-7.164 16-16S24.836 0 16 0zm8.688 16.701c0 1.5-.174 3-.174 3s-.17 1.278-.69 1.839c-.661.738-1.401.742-1.741.786-2.432.186-6.083.192-6.083.192s-4.518-.044-5.908-.186c-.387-.077-1.254-.055-1.916-.792-.521-.562-.69-1.839-.69-1.839s-.174-1.499-.174-3v-1.406c0-1.5.174-2.999.174-2.999s.17-1.278.69-1.841c.661-.739 1.401-.743 1.741-.785 2.431-.188 6.079-.188 6.079-.188h.008s3.648 0 6.079.188c.339.042 1.08.046 1.741.784.521.563.69 1.841.69 1.841s.174 1.5.174 3v1.406z"
+                  ></path>
+                </g>
+              </svg>
+            </a>
+          </div>
+        </div>
+
+        <div class="copyright">Copyright 2024 &copy; <p class="sarung-indonesia"> Sarung Indonesia</p></div>
+      </div>
+    </div>
+
     <!-- feather icon -->
     <script>
       feather.replace();
