fix: footer & name index

--- a/list_product.html
+++ b/list_product.html
@@ -574,7 +574,7 @@
 
     <!-- Footer -->
 
-    <div class="container">
+    <div class="footer_container">
       <div class="element">
         <div class="background-image">
           <div>
