--- a/product.html
+++ b/product.html
@@ -134,7 +134,6 @@
     <!-- Footer -->
 
     <div class="container">
-
       <div class="element">
         <div class="background-image">
           <div>
@@ -144,14 +143,30 @@
             </div>
 
             <ul>
-              <li class="footer-table"><a class="footer-a" href="">Sarung</a></li>
-              <li class="footer-table" ><a class="footer-a" href="" >Baju Muslim</a></li>
-              <li class="footer-table"><a class="footer-a" href="">Songkok</a></li>
-              <li class="footer-table"><a class="footer-a" href="">Subaiyah</a></li>
-              <li class="footer-table"><a class="footer-a" href="">Kain Batik</a></li>
-              <li class="footer-table"><a class="footer-a" href="">Sprei</a></li>
-              <li class="footer-table"><a class="footer-a" href="">Grosir</a></li>
-              <li class="footer-table"><a class="footer-a" href="">Produk Lainnya</a></li>
+              <li class="footer-table">
+                <a class="footer-a" href="">Sarung</a>
+              </li>
+              <li class="footer-table">
+                <a class="footer-a" href="">Baju Muslim</a>
+              </li>
+              <li class="footer-table">
+                <a class="footer-a" href="">Songkok</a>
+              </li>
+              <li class="footer-table">
+                <a class="footer-a" href="">Subaiyah</a>
+              </li>
+              <li class="footer-table">
+                <a class="footer-a" href="">Kain Batik</a>
+              </li>
+              <li class="footer-table">
+                <a class="footer-a" href="">Sprei</a>
+              </li>
+              <li class="footer-table">
+                <a class="footer-a" href="">Grosir</a>
+              </li>
+              <li class="footer-table">
+                <a class="footer-a" href="">Produk Lainnya</a>
+              </li>
             </ul>
           </div>
 
@@ -162,11 +177,21 @@
             </div>
 
             <ul>
-              <li class="footer-table"><a class="footer-a"  href="">How to Order</a></li>
-              <li class="footer-table"><a class="footer-a" href="">Customer Service</a></li>
-              <li class="footer-table"><a class="footer-a" href="">My Sarung Indonesia</a></li>
-              <li class="footer-table"><a class="footer-a" href="">Legal & Privacy</a></li>
-              <li class="footer-table"><a class="footer-a" href="">Contact</a></li>
+              <li class="footer-table">
+                <a class="footer-a" href="">How to Order</a>
+              </li>
+              <li class="footer-table">
+                <a class="footer-a" href="">Customer Service</a>
+              </li>
+              <li class="footer-table">
+                <a class="footer-a" href="">My Sarung Indonesia</a>
+              </li>
+              <li class="footer-table">
+                <a class="footer-a" href="">Legal & Privacy</a>
+              </li>
+              <li class="footer-table">
+                <a class="footer-a" href="">Contact</a>
+              </li>
             </ul>
           </div>
 
@@ -177,16 +202,20 @@
             </div>
 
             <ul>
-              <li class="footer-table"><a class="footer-a" href="">About Sarung Indonesia</a></li>
+              <li class="footer-table">
+                <a class="footer-a" href="">About Sarung Indonesia</a>
+              </li>
             </ul>
 
             <p class="follow">Follow Us :</p>
 
-            <a class="footer-a"
+            <a
+              class="footer-a"
               href="https://www.facebook.com/sarungindonesia.official"
               target="_blank"
             >
-              <svg class="svg-icon"
+              <svg
+                class="svg-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 x="0px"
                 y="0px"
@@ -200,11 +229,13 @@
               </svg>
             </a>
 
-            <a class="footer-a"
+            <a
+              class="footer-a"
               href="https://www.instagram.com/sarungindonesia.official/"
               target="_blank"
             >
-              <svg class="svg-icon"
+              <svg
+                class="svg-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 x="0px"
                 y="0px"
@@ -218,8 +249,13 @@
               </svg>
             </a>
 
-            <a class="footer-a" href="https://www.youtube.com/@sarungindonesia5589/videos" target="_blank">
-              <svg class="svg-icon"
+            <a
+              class="footer-a"
+              href="https://www.youtube.com/@sarungindonesia5589/videos"
+              target="_blank"
+            >
+              <svg
+                class="svg-icon"
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 32 32"
                 id="youtube"
@@ -235,7 +271,10 @@
           </div>
         </div>
 
-        <div class="copyright">Copyright 2024 &copy; <p class="sarung-indonesia"> Sarung Indonesia</p></div>
+        <div class="copyright">
+          Copyright 2024 &copy;
+          <p class="sarung-indonesia">Sarung Indonesia</p>
+        </div>
       </div>
     </div>
 
