fix: footer & name index

--- a/list_product.html
+++ b/list_product.html
@@ -76,7 +76,7 @@
       <div class="main-menu">
         <nav>
           <ul>
-            <li><a href="#">SARUNG</a></li>
+            <li><a href="#" class="select">SARUNG</a></li>
             <li><a href="#">BAJU MUSLIM</a></li>
             <li><a href="#">SONGKOK</a></li>
             <li><a href="#">SUBAIYAH</a></li>
